--- a/Learning/Function.html
+++ b/Learning/Function.html
@@ -74,7 +74,7 @@
 
       // *************** Function scope
       /* Variables defined inside a function cannot be accessed from anywhere outside the function, because the variable is defined only in the scope of the function.
-      However, a function can access all variables and functions defined inside the scope in which it is defined. It's also can be nested function */
+        However, a function can access all variables and functions defined inside the scope in which it is defined. It's also can be nested function */
       // Declared Function
       function cube() {
         var x = 5; // variable Declare and value assign
@@ -85,17 +85,17 @@
       // *************** recursive function
 
       /*  A recursive function is a function that calls itself within its own definition.
-    <code>
-        function factorial(n) {
-            if (n === 0) {
-                return 1;
-            } else {
-                return n * factorial(n - 1);
-            }
-        }
-        console.log(factorial(5)); // Output: 120
-     </code>   
-    */
+      <code>
+          function factorial(n) {
+              if (n === 0) {
+                  return 1;
+              } else {
+                  return n * factorial(n - 1);
+              }
+          }
+          console.log(factorial(5)); // Output: 120
+       </code>
+      */
 
       function factorial(n) {
         if (n === 0) {
@@ -109,10 +109,10 @@
 
       //   ************* Nested functions and closures
       /*
-    A nested function is a function that is nested within another function.
-    * The inner function can be accessed only from statements in the outer function.
-    * The inner function forms a closure: the inner function can use the arguments and variables of the outer function, while the outer function cannot use the arguments and variables of the inner function.
-    */
+      A nested function is a function that is nested within another function.
+      * The inner function can be accessed only from statements in the outer function.
+      * The inner function forms a closure: the inner function can use the arguments and variables of the outer function, while the outer function cannot use the arguments and variables of the inner function.
+      */
 
       // Example
       function addSquares(a, b) {
@@ -140,8 +140,58 @@
 
       //   ************* Function parameters
       /*
-      There are two special kinds of parameter syntax: default parameters and rest parameters.
-    */
+        There are two special kinds of parameter syntax: default parameters and rest parameters.
+      */
+      //  Default parameters
+      function multiply(a, b = 1) {
+        return a * b;
+      }
+
+      console.log(multiply(5)); // 5
+
+      // Rest parameters
+      function sum(...theArgs) {
+        let total = 0;
+        for (const arg of theArgs) {
+          total += arg;
+        }
+        return total;
+      }
+
+      console.log(sum(1, 2, 3));
+      // Expected output: 6
+
+      console.log(sum(1, 2, 3, 4));
+      // Expected output: 10
+
+      // ***************** Arrow function expressions
+      hello = () => {
+        return "Hello World!";
+      };
+
+      // Main syntax
+      // () => expression
+
+      // param => expression
+
+      // (param) => expression
+
+      // (param1, paramN) => expression
+
+      // () => {
+      //   statements
+      // }
+
+      // param => {
+      //   statements
+      // }
+
+      // (param1, paramN) => {
+      //   statements
+      // }
+
+      // ***************** JavaScript Built-in Functions/ Predefined functions
+      // https://www.tutorialspoint.com/javascript/javascript_builtin_functions.htm#
     </script>
   </body>
 </html>
