basic array done

--- a/Learning/array.html
+++ b/Learning/array.html
@@ -31,6 +31,11 @@
       const items = ["Banana", "Orange", "Apple"];
       items.push("Lemon");
       console.log(items);
+
+      // How to Recognize an Array
+      const fol = ["Banana", "Orange", "Apple"];
+      console.log("Recognize: " + Array.isArray(fol)); // return true if its an array.
+      console.log(fol instanceof Array); // 2nd method.
     </script>
   </body>
 </html>
