--- a/Problem solving/Simplification.html
+++ b/Problem solving/Simplification.html
@@ -8,7 +8,31 @@
 </head>
 <body>
     <script>
+        // Addition - Integer
+        let num1 = 5;
+        let num2 = num1 + 7;
+        console.log(num2);
+        // float
+        let num3 = 4.6;
+        let num4 = num3 * 9;
+        console.log(num4);
         
+        // conflict
+        let num5 = "6";
+        let num6 = num5 + 7 + 1;
+        console.log(num6); //-> 671
+
+        let num7 = 6;
+        let num8 = num7 + 1 + "7";
+        console.log(num8); //-> 77
+        // when we write string just before number/s, rest of number/s are count as string.
+
+
+        // Compound Assignment With Augmented Addition/subtraction (+-)
+        let num9 = 5;
+        num9 += 7;
+        console.log(num9);
+
     </script>
 </body>
 </html>
