js concate string with plus(+) operator

--- a/Learning/Basic-js.html
+++ b/Learning/Basic-js.html
@@ -33,6 +33,25 @@
         num9 += 7;
         console.log(num9);
 
+        // Escaping Literal Quotes in Strings
+        let str1 = 'I am a \"double quoted\" string inside single quotes';
+        console.log(str1);
+        
+        /* ******* Escape Sequences in Strings:
+
+        \'	single quote
+        \"	double quote
+        \\	backslash
+        \n	newline
+        \t	tab
+        \r	carriage return
+        \b	backspace
+        \f	form feed
+
+        */
+        const myStr = "FirstLine\n\t\\SecondLine\nThirdLine";
+        console.log(myStr);
+
     </script>
 </body>
 </html>
