basic concate complete

--- a/Learning/Basic-js.html
+++ b/Learning/Basic-js.html
@@ -52,6 +52,14 @@
         const myStr = "FirstLine\n\t\\SecondLine\nThirdLine";
         console.log(myStr);
 
+        // Find Character in a String
+        let findChar = "Hello World";
+        
+        console.log(findChar[0]); //-> H
+        const lastLetterOfLastName = findChar[findChar.length - 1];
+        console.log(lastLetterOfLastName) //-> d
+        
+
     </script>
 </body>
 </html>
